src/system/modules/!composer/assets/css/backend.css
h2.sub_headline small {
	font-size: 80%;
	color: #999;
}

/**
 * Stability colors
 */
span.stability-stable {
	color: #006400;
}
span.stability-rc {
	color: #add8e6;
}
span.stability-beta {
	color: orange;
}
span.stability-alpha {
	color: red;
}
span.stability-dev {
	color: #dc143c;
}

/**
 * Installation actions
 */
.installation-candidate {
	color: gray;
}
.to-be-removed {
	color: #900;
}

/**
 * Some generic styles
 */
#tl_buttons a {
	margin-left: 15px;
}
#tl_buttons img {
	vertical-align: middle;
}
.output {
	font-family: monospace;
	margin: 24px 18px;
	padding: 6px 8px;
	white-space: pre-line;
	background-color: #111;
	color: #fff;
	max-height: 20em;
	overflow: auto;
}
.output.fullsize {
    max-height: none;
}

/**
 * Migration wizard
 */
.tl_composer_migrate h2 {
	padding-top: 0.83em;
	border-top: 1px solid #ddd;
	color: #8ab858;
	font-size: 14px;
}
.tl_composer_migrate p,
.tl_composer_migrate li {
	line-height: 1.5em;
}
.tl_composer_migrate .preconditions li.fail {
	color: #990000;
	background-image: url(../images/fail.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .preconditions li.warn {
	color: #999900;
	background-image: url(../images/warn.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .preconditions li.pass {
	color: #009900;
	background-image: url(../images/pass.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .questions {
	margin-bottom: 2em;
}
.tl_composer_migrate label {
	display: block;
	border: 1px solid #ccc;
	border-radius: 5px;
	padding: 1em;
	margin: 1em 0;
}
.tl_composer_migrate label span.input {
	float: left;
}
.tl_composer_migrate label span.text {
	display: block;
	margin-left: 3em;
}
.tl_composer_migrate .mode_upgrade {
	border-color: #006400;
}
.tl_composer_migrate .mode_upgrade strong {
	color: #006400;
}
.tl_composer_migrate .mode_upgrade.checked {
	background-color: #CDFFCD;
}
.tl_composer_migrate .mode_clean {
	border-color: #FFB269;
}
.tl_composer_migrate .mode_clean strong {
	color: #FFB269;
}
.tl_composer_migrate .mode_clean.checked {
	background-color: #FFE6CD;
}
.tl_composer_migrate .mode_none {
	border-color: #990000;
}
.tl_composer_migrate .mode_none strong {
	color: #990000;
}
.tl_composer_migrate .mode_none.checked {
	background-color: #FFCDCD;
}

.tl_composer_migrate .setup_production {
	border-color: #006400;
}
.tl_composer_migrate .setup_production strong {
	color: #006400;
}
.tl_composer_migrate .setup_production.checked {
	background-color: #CDFFCD;
}
.tl_composer_migrate .setup_development {
	border-color: #002878;
}
.tl_composer_migrate .setup_development strong {
	color: #002878;
}
.tl_composer_migrate .setup_development.checked {
	background-color: #CDDEFF;
}

/**
 * Undo migration
 */
.tl_composer_migrate_undo ul {
	list-style: disc;
	margin-left: 1em;
	padding-left: 1em;
}
.tl_composer_migrate_undo li {
	list-style: disc;
	line-height: 1.5em;
}

/**
 * Listing view
 */
table {
	table-layout: fixed;
}
.col_type {
	width: 16px;
}
.col_icon {
	width: 16px;
}
.col_action {
	text-align: right;
}
.col_action input,
.col_action select {
	vertical-align: middle;
}
.col_type .label {
	display: inline-block;
	padding: 3px 3px 1px;
	border-radius: 3px;
	background-color: #333;
	color: #fff;
	font-family: monospace;
	font-size: 10px;
}
.col_collapse {
	width: 16px;
}
.col_group {
	padding: 4px 0;
	white-space: nowrap;
}
.col_name {
	padding: 4px 0;
	white-space: nowrap;
	width: 99%;
}
.col_name .toggler {
	cursor: pointer;
}
.col_name .name {
	color: maroon;
}
.col_name .description {
	white-space: normal;
}
.col_name .description p {
	color: #666;
	margin-top: 12px;
}
.col_name .replace {
	display: block;
	color: #aaa;
}
.col_name .replace:before {
	display: inline-block;
	content: "\2936";
	margin-left: .25em;
	margin-right: .25em;
	-webkit-transform:rotate(90deg);
	-moz-transform:rotate(90deg);
	-ms-transform:rotate(90deg);
	-o-transform:rotate(90deg);
	transform:rotate(90deg);
}
.col_version {
	width: 140px;
}
.col_pin {
	width: 16px;
}
.col_remove {
	width: 16px;
}
.col_pin form,
.col_remove form {
	display: inline;
}
.col_pin input[type="image"],
.col_remove input[type="image"] {
	vertical-align: -4px;
}
.tl_listing td.col_dependants {
	padding: 0 !important;
}
.col_dependants table {
	table-layout: fixed;
	width: 100%;
}
.col_dependants .tl_file_list {
	background-color: transparent;
}

p.dependants {
	margin: 12px 0 0 0;
}
p.dependants,
p.dependencies {
	padding: 2px 6px 3px;
}
p.dependants input,
p.dependencies input {
	vertical-align: middle;
}
span.dependency-indent {
	position: relative;
	display: inline-block;
	width: 18px;
	height: 16px;
	vertical-align: middle;
}
span.dependency-indent.child span.horizontal {
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -1px;
	width: 50%;
	height: 2px;
	background-color: #ccc;
}
span.dependency-indent span.vertical {
	position: absolute;
	top: -6px;
	left: 50%;
	margin-left: -1px;
	width: 2px;
	height: 28px;
	background-color: #ccc;
}
span.dependency-indent.last span.vertical {
	display: none;
}
span.dependency-indent.child.last span.vertical {
	display: inline;
	height: 14px;
}

/**
 * Search result view
 */
#tl_composer_search .col_name .name,
#tl_composer_search .col_name .name a {
	color: maroon;
	margin-top: 6px;
	margin-bottom: 4px;
	font-size: 14px;
}
#tl_composer_search .col_name .description p {
	margin-top: 0;
	margin-bottom: 6px;
}

/**
 * Details view
 */
.composer_package_type_contao_module {
	background: -moz-linear-gradient(top,  #FFB269 0%, #ffffff 128px);
	background: -webkit-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: -o-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: -ms-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: linear-gradient(to bottom,  #FFB269 0%,#ffffff 128px);
}
/* ... */

